@@ -1,4 +1,6 @@
 ver 0.21.18 (not yet released)
+* output
+  - alsa: fix hang bug with ALSA "null" outputs
 * reduce unnecessary CPU wakeups
 
 ver 0.21.17 (2019/12/16)
